# MIOpen

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.perftests  Jenkinsfile  LICENSE.md  README.md  codecov.yml  custom.properties  dev-requirements.txt  install_deps.cmake  rbuild.ini  requirements.txt
.githooks/: install
.github/: CODEOWNERS  pull_request_template.md
.jenkins/: perf_test
addkernels/: CMakeLists.txt
cmake/: Analyzers.cmake  ClangCheck.cmake  ClangTidy.cmake  CppCheck.cmake  Dependencies.cmake  Eigen3Config.cmake  EnableCompilerWarnings.cmake  FindOpenCL.cmake  FindSQLite3.cmake  Findnlohmann_json.cmake  amd_comgrConfig.cmake  frugally-deepConfig.cmake  rocm-path.cmake
cmake.win/: Eigen3Config.cmake  FindBZip2.cmake  frugally-deepConfig.cmake
docs/: CMakeLists.txt  index.rst  license.md
driver/: CBAInferFusion_driver.hpp  CMakeLists.txt  README.md  activ_driver.hpp  bn_driver.hpp  conv_common.cpp  conv_common.hpp  conv_driver.hpp  ctc_driver.hpp  dm_bnorm.cpp  dm_convbfp8.cpp  dm_convfp8.cpp  dm_fusion.cpp  driver.cpp  driver.hpp  dropout_driver.hpp  dropout_gpu_emulator.hpp  gru_verify_gemm.hpp  layernorm_driver.hpp  lstm_verify_gemm.hpp  main.cpp  miopen_ConvBatchNormActivHost.hpp  mloNeuronHost.hpp  pool_driver.hpp  random.hpp  reducecalculation_driver.hpp  rnn_driver.hpp  rnn_seq_driver.hpp  rnn_verify_gemm.hpp  softmax_driver.hpp  sys_info.hpp  tensor_driver.hpp  tensorop_driver.hpp  util_driver.hpp
lib/: sqlite3.lib
samples/: README.md  utils.hpp
samples/cba_fused_infer/: CMakeLists.txt  sample_cba_fused_fwd.cpp
script/: launch_tests.sh  sccache_wrapper.sh
speedtests/: sequences.cpp
src/: CMakeLists.txt  activ.cpp  adam.cpp  addlayernorm.cpp  base64.cpp  batch_norm.cpp  batch_norm_api.cpp  cat.cpp  check_numerics.cpp  comgr.cpp  convolution.cpp  convolution_api.cpp  ctc.cpp  db_record.cpp  driver_arguments.cpp  dropout_api.cpp  env.cpp  env_debug.cpp  find_controls.cpp  find_db.cpp  fused_api.cpp  fusion.cpp  gemm_v2.cpp  generic_search.cpp  getitem.cpp  glu.cpp  groupnorm.cpp  kernel_cache.cpp  kthvalue.cpp  layernorm.cpp  layernorm_api.cpp  logger.cpp  lrn_api.cpp  mlo_dir_conv.cpp  multimarginloss.cpp  pooling.cpp  pooling_api.cpp  prelu.cpp  problem.cpp  reducecalculation.cpp  (+19 more)
test/: CMakeLists.txt  args.hpp  bn_3d_peract_test.cpp  bn_3d_spatial_test.cpp  bn_peract_test.cpp  cba_inference.cpp  (+27 more)
(+2780 files in other folders)
